eks-elb-project/k8s/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: public.ecr.aws/docker/library/nginx:1.25
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: app1-html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app1-html
          configMap:
            name: app1-html

---
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  namespace: production
spec:
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
